tenzir/integration/data/reference/pipelines_local/test_print_cef_in_json/step_01.ref
error: field dvc is not of type record
 --> <input>:1:128
  |
1 | from /Users/balavinaithirthan/tenzirCopies/tenzirNoPlugCopy/tenzir/integration/data/inputs/cef/forcepoint.log read cef | print extension.dvc json 
  |                                                                                                                                ^^^^^^^^^^^^^ 
  |